apps/app-proxy/overlays/codefreshhello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefreshhello-cap-app-proxy
  namespace: codefreshhello
spec:
  ingressClassName: nginx
  rules:
  - host: codefreshhello.15.207.101.142.nip.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
